fix sidebar overflow

--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -5,6 +5,7 @@
   background-color: $bg-color;
 
   .image-wrapper {
+    overflow: hidden;
     position: absolute;
     top: 0;
     right: 0;
